[package]
name = "bevy_other_world"
version = "0.1.1-alpha"
authors = ["James Bell <jamescarterbell@gmail.com>"]
edition = "2018"
description = "Experimental subworlds plugin for Bevy"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
fixedbitset = "0.4"